2009-07-31  Adam Fedor  <fedor@gnu.org>

	* Version 0.17.1

2009-07-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m,
	* Source/xlib/GSXftFontInfo.m: Use DejaVu as another fallback
	font, as Bitstream Vera and FreeSans are no longer supplied
	directly by Debian.

2009-07-13 Fred Kiefer <FredKiefer@gmx.de>

        * Source/winlib/WIN32GState.m (-_paintPath:) Only draw when the
	fill/stroke colour has a non zero alpha. 

2009-07-10 Fred Kiefer <FredKiefer@gmx.de>

        * Source/cairo/CairoGState.m
	(-compositeGState:fromRect:toPoint:op:fraction:): Add hack to
	avoid scrolling problem for cairo > 1.8.	

2009-05-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m: Protect the XSHM code parts with
	#ifdef statements.

2009-05-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m (-DPScomposite:...:, -DPSdissolve:...:) Map
	onto GScomposite:toPoint:fromRect:operation:fraction:.
	* Source/gsc/GSGState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:) Map onto
	compositeGState:fromRect:toPoint:op:fraction:. 
        * Source/winlib/WIN32GState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:),
	* Source/xlib/XGGState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:),
        * Source/cairo/CairoGState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:): Remove these methods.
	* Source/art/composite.m
	(-compositeGState:fromRect:toPoint:op:fraction:): Added.

2009-05-10  Adam Fedor  <fedor@gnu.org>

	* Version 0.17.0

2009-04-04 Riccardo Mottola <rmottola@users.sf.net>

	* Source/x11/XGGLFormat.m,
	Source/x11/XGGLContext.m: reorder instructions for c89 compatibility

2009-03-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:):
	Return an autorelease instance.
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:),