@@ -1,3 +1,10 @@
+2009-10-18 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/x11/XGServerWindow.m:
+	* Source/x11/XGServerEvent.m:
+	Experimental code to try to spot window deminiaturisation and send
+	an event to the gui so that it knows about it.
+
 2009-07-31  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.17.1
